gcc/testsuite/gdc.test/runnable/test20275.d
// EXTRA_SOURCES: imports/你好.d

import imports.你好;

int main()
{
	return foo();
}
