gcc/testsuite/gdc.test/fail_compilation/imports/fail2962a.d
import fail2962;

// comment 4
int foo4()
{
    return bar4(0);
}
